# flora

./: .gitignore  CHANGELOG.md  Prompt.txt  RELEASE_TUTORIAL.md  build_log.txt  discohook_updater.json  discohook_webhook.json  html ui.html  imgui.ini  update.json
Flora Updater/: CMakeLists.txt
Flora Updater/src/: http.cpp  http.h  json.cpp  json.h  main.cpp  updater.cpp  updater.h  version.cpp  version.h  zip.cpp  zip.h
backup/: CMakeLists.txt
backup/imgui_ui/: CMakeLists.txt
backup/imgui_ui/src/: main.cpp
backup/src/memory/: instance_walker.h
backup/src/process/: scanner.h
backup/ui/: App.xaml.cs
imgui_ui/: CMakeLists.txt
imgui_ui/src/: main.cpp
imgui_ui/web_ui/: index.html
imgui_ui/webview2_sdk/_rels/: .rels
include/: instance_utils.h  offsets.h
src/: exports.cpp  http_server.h  main.cpp  winhttp_client.h
src/execution/: executor.h  unc_payload.h
src/memory/: instance_walker.h  pattern_scanner.h
ui/: MainWindow.xaml  MainWindow.xaml.cs  RblxCore.cs  RblxExecutorUI.csproj
